overflow-x fixed on homepage

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -4,9 +4,11 @@
 * {
     font-size: 17px;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
+
     width: 13px;
     height: 13px;
 }
@@ -67,7 +69,7 @@
 
 #app{
 background-color: #F5F8FA;
-overflow-x: hidden;
+
 }
 
 .navbar-toggler{
@@ -143,14 +145,14 @@ overflow-x: hidden;
     }
 }
 .jumbotron-overlay {
-    width: 100%;
-    height: 100%;
+
+    width: inherit;
+    height: inherit;
     overflow: hidden;
     background: rgba(0, 0, 0, .5);
     background-size: cover;
     position: absolute;
-    top: 0;
-    left: 0;
+
 }
 
 
@@ -182,7 +184,12 @@ overflow-x: hidden;
     width: 100px;
     // align-self: flex-end;
 }
-// carousel doctor
+
+// carousel doctor ---------------------------------------------------
+
+.carousel {
+    overflow-x: visible;
+}
 
 .title-carousel{
     font-weight: bold;
